# SquareEngine

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  DynamicRectangle.cpp  DynamicRectangle.hpp  GraphicObject.hpp  Main.cpp  PhysicSpace.cpp  PhysicSpace.hpp  README.md  Rectangle.cpp  Rectangle.h  Rectangle.hpp  Scene.cpp  Scene.h  Scene.hpp  SquareEngine.cpp  SquareEngine.h  SquareEngine.hpp  SquareEngine.sln  SquareEngine.vcxproj  SquareEngine.vcxproj.filters  StaticRectangle.cpp  StaticRectangle.hpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
.github/workflows/: cmake.yml
SquareEngine/: Color.h  Main.cpp  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  SquareEngine.cpp  SquareEngine.h  SquareEngine.vcxproj  SquareEngine.vcxproj.filters  Vector.h
docs/: Technical notes.md
tests/: CMakeLists.txt  test.cpp
utils/: Color.hpp  Vector.hpp
